[gd_scene load_steps=9 format=3 uid="uid://tbbseijgioje"]

[ext_resource type="Texture2D" uid="uid://cfngxsisimme" path="res://assets/images/note1.png" id="1_cxn7x"]
[ext_resource type="Script" uid="uid://ccnlc0a4tvrnh" path="res://scripts/notes.gd" id="1_xcep3"]
[ext_resource type="Texture2D" uid="uid://be32asbbhyyer" path="res://assets/images/note1_near.png" id="2_xcep3"]
[ext_resource type="Texture2D" uid="uid://cppx55jrlp8xm" path="res://assets/images/controls_button.png" id="4_88ptu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_88ptu"]
radius = 8.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8j4ab"]
atlas = ExtResource("4_88ptu")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vklxr"]
atlas = ExtResource("4_88ptu")
region = Rect2(32, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4byse"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j4ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j4ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j4ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vklxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vklxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vklxr")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="Notes" type="Area2D"]
collision_layer = 16
script = ExtResource("1_xcep3")

[node name="Note_Range" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_88ptu")

[node name="Note" type="Sprite2D" parent="."]
texture = ExtResource("1_cxn7x")

[node name="Note_Near" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_xcep3")

[node name="Button" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_4byse")
animation = &"idle"
autoplay = "idle"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
